src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels: {
    "showOnClusterPortal" : "true"
  }
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 1234
