src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels: {
    "showOnClusterPortal" : "true"
  }
spec:
  rules:
  - host: testhost2
    http:
      paths:
      - path: /testpath2
        pathType: Prefix
        backend:
          service:
            name: my-service2
            port:
              number: 80
